# HomeServiceRobot

./: .gitignore  Dockerfile  README.md  docker-run.sh  frames.gv
src/add_markers/: package.xml
src/add_markers/src/: add_markers.cpp
src/ball_chaser/: CMakeLists.txt
src/ball_chaser/launch/: ball_chaser.launch
src/ball_chaser/src/: drive_bot.cpp  process_image.cpp
src/kobuki/kobuki_description/urdf/: kobuki_gazebo.urdf.xacro
src/map/: my_map.pgm  my_map1.pgm  my_map1.yaml  perfect.world
src/my_robot/launch/: robot_description.launch
src/my_robot/urdf/: my_robot.gazebo  my_robot.xacro
src/my_robot/worlds/: perfect2.world  perfect3.world  perfect4.world
src/my_robot/worlds/my_ball/: model.sdf
src/pick_objects/: CMakeLists.txt  package.xml
src/pick_objects/src/: pick_objects.cpp
src/rvizConfig/: home_service.rviz
src/scripts/: add_markers.sh  auto_cartographer.sh  auto_slam.sh  cartographer_demo.launch  cartographer_slam.sh  home_service.sh  launch.sh  move_base.launch  pick_objects.sh  test_navigation.sh  test_slam.sh  turtlebot2_cartographer.lua
src/slam/: CMakeLists.txt  package.xml
src/slam/config/: slam_params.yaml
src/slam/launch/: mapping.launch
src/slam/maps/: rtabmap.pgm  rtabmap.yaml
src/turtlebot/turtlebot_teleop/launch/: keyboard_teleop.launch
src/turtlebot_apps/turtlebot_navigation/launch/includes/amcl/: amcl.launch.xml
src/turtlebot_apps/turtlebot_navigation/launch/includes/gmapping/: gmapping.launch.xml
src/turtlebot_apps/turtlebot_navigation/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  gmapping_params.yaml  move_base_params.yaml
src/turtlebot_simulator/turtlebot_gazebo/launch/: turtlebot_world.launch
src/turtlebot_simulator/turtlebot_gazebo/scripts/: odom_to_tf.py
