<?xml version="1.0"?>
<package format="2">
  <name>pick_objects</name>
  <version>0.0.0</version>
  <description>Commands robot to drive to pickup and drop off zones</description>
  <maintainer email="todo@todo.todo">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>actionlib</depend>
</package>
